--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,15 @@
 		<version>3.6.1</version>
 	</parent>
 
+
+
 	<dependencies>
 		<dependency>
 			<groupId>tip</groupId>
-			<artifactId>audites-dom</artifactId>
+			<artifactId>auditers-dom</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+
 	</dependencies>
 </project>
